fixing issue with horizontal scrolling

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -85,6 +85,7 @@ html, body { height: 100%; min-height: 100%; }
         width: 100%;
         position: relative;
         padding: 0;
+        overflow-x: hidden;
 
         font-size: 24px;
 
